Creating site for 1.0-SNAPSHOT

--- a/examples/example.html
+++ b/examples/example.html
@@ -109,7 +109,7 @@ Define value for property 'package':  com.example: :
 [INFO] Using property: parameterExpression = file
 [INFO] Using property: parameterName = file
 [INFO] Using property: parameterType = java.io.File
-[INFO] Using property: pluginDescription = Maven plugin using the Apach Beanshell Touch task to touch a given file
+[INFO] Using property: pluginDescription = Maven plugin using Beanshell to touch a given file
 [INFO] Using property: pluginName = Beanshell Touch Maven Plugin
 Confirm properties configuration:
 groupId: com.example
@@ -135,7 +135,7 @@ pluginName: Beanshell Touch Maven Plugin
 [INFO] Parameter: package, Value: com.example
 [INFO] Parameter: packageInPathFormat, Value: com/example
 [INFO] Parameter: parameterDescription, Value: File to be touched
-[INFO] Parameter: pluginDescription, Value: Maven plugin using the Apach Beanshell Touch task to touch a given file
+[INFO] Parameter: pluginDescription, Value: Maven plugin using Beanshell to touch a given file
 [INFO] Parameter: goalPrefix, Value: touch
 [INFO] Parameter: groupId, Value: com.example
 [INFO] Parameter: parameterType, Value: java.io.File
